--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,5 +8,8 @@
     tools:context="com.example.gokulpradeep.leavereport.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-
+<FrameLayout
+    android:layout_width="match_parent"
+    android:id="@+id/main_frame_layout"
+    android:layout_height="match_parent"></FrameLayout>
 </android.support.constraint.ConstraintLayout>
